<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virus Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mode_ready">Ready</string>
    <string name="mode_pause">Pause</string>
    <string name="mode_lose">Lose</string>
    <string name="mode_win">Win</string>
    <string name="score_text">0</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_resume">Resume</string>
    <string name="message_stopped">Stopped</string>
    <string name="game_levels">Play Levels</string>
    <string name="game_free">Play free play</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High scores</string>
    <string name="game_type">level</string>

</resources>
