<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="90dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_play_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="172dp"
        android:text="@string/game_levels"
        app:layout_constraintBottom_toTopOf="@+id/textView_high_scores"
        app:layout_constraintEnd_toStartOf="@+id/button_free_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_free_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="190dp"
        android:text="@string/game_free"
        app:layout_constraintBottom_toTopOf="@+id/ListView_high_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_play_levels"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="131dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/ListView_high_scores"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        tools:layout_editor_absoluteX="174dp" />

    <TextView
        android:id="@+id/textView_high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="1dp"
        android:text="@string/high_scores"
        app:layout_constraintBottom_toTopOf="@+id/ListView_high_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play_levels" />

    <ListView
        android:id="@+id/ListView_high_scores"
        android:layout_width="409dp"
        android:layout_height="382dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>